Update to AGP 8/Gradle 8 (#117)
* Gradle 8.0-rc-1

* Update deps

* Update CI

* Update artifacts API

* fix CI

* 19

* Restore cache

* API

* Replace classpath prop

* Remove unused function

* Add missing sensitivities

* Use resolve b/199411018

* Remove appExtension where possible

* Use ALL scope

* Comment + distinct and sorted for determinism

* Don't run as parameterized

* test file cleanups

* Fix plugin toolchain

* Update deps

* inline away minifiertype

* Formatting + always emit diagnostics in tests

* Fix missing classpath wiring in test jar

* ABI

* set toolchains and compilerOptions

* More compilerOptions

* subprojects only

* ...unfiltered?

* Use provider

* Consolidate repositories

* Trim comparison

* uh

* What about compileConfiguration

* Update CI versions

* Gradle 8.0 final

* Disable 8.1.0 on CI for now

* Try ADTs

* De-flake

* Disable AVD caching for now

* Assemble eagerly

* Apparently compileConfiguration explodes

* Update AGP

* Add disable mechanism

* Gradle 8.0.1

* Fix property location

* Always use trace refs

* Try just artifactFiles

* Revert "Try just artifactFiles"

This reverts commit 008e52b39f8b9c8882dcfce9a8a7a8dd5dd95ef5.

* Re-enable config caching in tests

* Fix config cache tests

* Revert "Revert "Try just artifactFiles""

This reverts commit 4f7b534d66deb62a4c7141da5ff5ff140579cc75.

* Update again

* Wrap in provider

* beta03

* KeeperJarTask cleanups

* Don't extend JavaExec anymore

* Remove old suppression

* Update API

* Update to final versions

* Update wrapper files

* Fix rules version

* Update CI

* Fix name

* Improve message

* Remove unused import

* Apparently new content in the file

* Convert to kotlin DSL

* Use Truth for better messages

* Spotless 6.18.0

* do these still matter in the year of our lord 2023

* spotless